Fixed overflow and added another img to second-section

--- a/08-RESPONSIVE-HOMEWORK/styles/styles.css
+++ b/08-RESPONSIVE-HOMEWORK/styles/styles.css
@@ -100,7 +100,9 @@ button {
 }
 
 /* main */
-
+main{
+  overflow-x: hidden;
+}
 .first-section {
   height: 37em;
   background: linear-gradient(
